<resources>
    <string name="app_name">CITestingProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_first_name_empty">First name cannot be empty.</string>
    <string name="error_last_name_empty">Last name cannot be empty.</string>

    <!-- splash screen -->
    <string name="splash_screen">Splash Screen</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="users">Users</string>
    <string name="teams">Teams</string>
    <string name="title_activity_user">UserActivity</string>
</resources>
